[gd_scene load_steps=24 format=3 uid="uid://bpdb82bb2pt3p"]

[ext_resource type="Script" uid="uid://b4ft8uaj17hb7" path="res://screens/battle_screen/battle_screen_root.gd" id="1_64jy8"]
[ext_resource type="Script" uid="uid://cbysrkerddaep" path="res://mechanisms/camera_panning/camera_pan.gd" id="1_tl5f3"]
[ext_resource type="Resource" uid="uid://naqrhr0nmj82" path="res://mechanisms/camera_panning/camera_status.tres" id="2_0j6um"]
[ext_resource type="PackedScene" uid="uid://cqwkp3wnqtiqt" path="res://cards/card_pedastals/card_pedastal.tscn" id="2_4fp31"]
[ext_resource type="PackedScene" uid="uid://ofliosjyewdv" path="res://screens/battle_screen/important_scenes/battleground.tscn" id="2_k87bv"]
[ext_resource type="PackedScene" uid="uid://f1myiq461mwn" path="res://cards/card.tscn" id="3_xgjcn"]
[ext_resource type="PackedScene" uid="uid://dbf47tfb4fwd2" path="res://screens/battle_screen/player_base/player_base.tscn" id="4_6wt21"]
[ext_resource type="Script" uid="uid://bseuguc3mfajl" path="res://mechanisms/ui/cursor_over_control.gd" id="5_4af0x"]
[ext_resource type="Resource" uid="uid://ch1hfjj0q4x66" path="res://cards/card_attributes/null_card_attributes.tres" id="5_d54dk"]
[ext_resource type="PackedScene" uid="uid://bmwaw47oohdrx" path="res://screens/battle_screen/enemy_base/enemy_base.tscn" id="6_3usd0"]
[ext_resource type="Resource" uid="uid://brh6d46rxnywu" path="res://mechanisms/ui/cursor_hover_over_control_resource.tres" id="6_buayt"]
[ext_resource type="Texture2D" uid="uid://x8hf4jxb5jpd" path="res://textures/deck_altar/deck_altar.png" id="9_r1pxh"]
[ext_resource type="Resource" uid="uid://kdrsmfb6tfud" path="res://mechanisms/deck/deck_resource/deck_resource.tres" id="11_yswp7"]
[ext_resource type="Resource" uid="uid://cekx4pw3dmytp" path="res://cards/card_resource/null_card_resource.tres" id="12_eyxvs"]
[ext_resource type="Texture2D" uid="uid://y0imwbfxofv" path="res://textures/cards/fantasia/kingdom/peasant_card.png" id="15_eyxvs"]
[ext_resource type="Script" uid="uid://csvyn8sc2fo4c" path="res://mechanisms/deck/cards_manager.gd" id="16_yswp7"]
[ext_resource type="Texture2D" uid="uid://bxawpcl7t70yf" path="res://textures/graveyard/graveyard.png" id="17_00yqp"]
[ext_resource type="Resource" uid="uid://r07turfc5ynk" path="res://mechanisms/deck/hand_resource/hand_resource.tres" id="19_eyxvs"]
[ext_resource type="Resource" uid="uid://dd810ai8vpyoe" path="res://mechanisms/deck/graveyard_resource/graveyard_resource.tres" id="19_mnm7k"]
[ext_resource type="Script" uid="uid://cl1g2gsthm6p" path="res://mechanisms/deck/refill_deck_button.gd" id="21_3usd0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_64jy8"]
size = Vector2(50, 10000)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ion7m"]
bg_color = Color(0.584322, 0.397759, 0.350572, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_buayt"]
bg_color = Color(0.665785, 0.464685, 0.414264, 1)

[node name="BattleScreen" type="Node" node_paths=PackedStringArray("entities")]
script = ExtResource("1_64jy8")
entities = NodePath("Entities")

[node name="BattleCamera" type="Camera2D" parent="."]
position = Vector2(960, 580)
script = ExtResource("1_tl5f3")
cam_speed = 500
camera_status_resource = ExtResource("2_0j6um")

[node name="BattleGroundAnchor" type="Node2D" parent="."]
position = Vector2(960, 879)

[node name="BattleGround" parent="BattleGroundAnchor" instance=ExtResource("2_k87bv")]

[node name="EnemyBaseRemote" type="RemoteTransform2D" parent="BattleGroundAnchor/BattleGround"]
position = Vector2(0, -1)
remote_path = NodePath("../../../EnemyBaseAnchor")
update_rotation = false
update_scale = false

[node name="ArenaLWallRemote" type="RemoteTransform2D" parent="BattleGroundAnchor/BattleGround"]
position = Vector2(-0.5, -0.5)
remote_path = NodePath("../../../ArenaLeftWall")
update_rotation = false
update_scale = false

[node name="ArenaRWallRemote" type="RemoteTransform2D" parent="BattleGroundAnchor/BattleGround"]
position = Vector2(0.5, -0.5)
remote_path = NodePath("../../../ArenaRightWall")
update_rotation = false
update_scale = false

[node name="Entities" type="Node2D" parent="."]
z_index = 3
position = Vector2(960, 880)

[node name="ArenaRightWall" type="StaticBody2D" parent="."]
position = Vector2(1460, 389)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArenaRightWall"]
position = Vector2(25, 0)
shape = SubResource("RectangleShape2D_64jy8")
debug_color = Color(0.392157, 0.392157, 0.392157, 0.196078)

[node name="ArenaLeftWall" type="StaticBody2D" parent="."]
position = Vector2(460, 389)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArenaLeftWall"]
position = Vector2(-25, 0)
shape = SubResource("RectangleShape2D_64jy8")
debug_color = Color(0.392157, 0.392157, 0.392157, 0.196078)

[node name="PlayerBaseAnchor" type="Node2D" parent="."]
position = Vector2(960, 880)

[node name="PlayerBase" parent="PlayerBaseAnchor" instance=ExtResource("4_6wt21")]

[node name="BattleGroundRemote" type="RemoteTransform2D" parent="PlayerBaseAnchor/PlayerBase"]
position = Vector2(0, -1)
remote_path = NodePath("../../../BattleGroundAnchor")
update_rotation = false
update_scale = false

[node name="EntitiesRemote" type="RemoteTransform2D" parent="PlayerBaseAnchor/PlayerBase"]
remote_path = NodePath("../../../Entities")
update_rotation = false
update_scale = false

[node name="EnemyBaseAnchor" type="Node2D" parent="."]
position = Vector2(960, -101)

[node name="EnemyBase" parent="EnemyBaseAnchor" instance=ExtResource("6_3usd0")]

[node name="BattleAnchor" type="Node2D" parent="."]
position = Vector2(960, 880)

[node name="PlayerBaseRemote" type="RemoteTransform2D" parent="BattleAnchor"]
remote_path = NodePath("../../PlayerBaseAnchor")
update_rotation = false
update_scale = false

[node name="UI" type="CanvasLayer" parent="."]

[node name="CardsManager" type="Node2D" parent="UI" node_paths=PackedStringArray("pedastal_a", "pedastal_b", "pedastal_c", "pedastal_d", "deck_altar_marker", "ui_canvas_layer", "card_preview")]
script = ExtResource("16_yswp7")
deck_resource = ExtResource("11_yswp7")
graveyard_resource = ExtResource("19_mnm7k")
hand_resource = ExtResource("19_eyxvs")
null_card_resource = ExtResource("12_eyxvs")
pedastal_a = NodePath("../HBoxContainer/MiddleVBox/PanelVbox/MiddlePanel/MarginContainer/HandContainer/CardSlotA/PedastalA")
pedastal_b = NodePath("../HBoxContainer/MiddleVBox/PanelVbox/MiddlePanel/MarginContainer/HandContainer/CardSlotB/PedastalB")
pedastal_c = NodePath("../HBoxContainer/MiddleVBox/PanelVbox/MiddlePanel/MarginContainer/HandContainer/CardSlotC/PedastalC")
pedastal_d = NodePath("../HBoxContainer/MiddleVBox/PanelVbox/MiddlePanel/MarginContainer/HandContainer/CardSlotD/PedastalD")
deck_altar_marker = NodePath("../HBoxContainer/LeftPanel/LeftVBox/DeckAltar/DeckAltarTexture/DeckAltarMarker")
ui_canvas_layer = NodePath("..")
card_preview = NodePath("../HBoxContainer/LeftPanel/LeftVBox/DeckAltar/DeckAltarTexture/DeckAltarMarker/CardPreview")
card_scene = ExtResource("3_xgjcn")

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="LeftPanel" type="Panel" parent="UI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ion7m")

[node name="LeftVBox" type="VBoxContainer" parent="UI/HBoxContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Space" type="Control" parent="UI/HBoxContainer/LeftPanel/LeftVBox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="DeckAltar" type="Control" parent="UI/HBoxContainer/LeftPanel/LeftVBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
mouse_filter = 1

[node name="DeckAltarTexture" type="TextureRect" parent="UI/HBoxContainer/LeftPanel/LeftVBox/DeckAltar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 161.1
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_r1pxh")
expand_mode = 5

[node name="DeckAltarMarker" type="Marker2D" parent="UI/HBoxContainer/LeftPanel/LeftVBox/DeckAltar/DeckAltarTexture"]
position = Vector2(232, -65)

[node name="CardPreview" type="Sprite2D" parent="UI/HBoxContainer/LeftPanel/LeftVBox/DeckAltar/DeckAltarTexture/DeckAltarMarker"]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("15_eyxvs")

[node name="MiddleVBox" type="VBoxContainer" parent="UI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.17
theme_override_constants/separation = 0

[node name="Space" type="Control" parent="UI/HBoxContainer/MiddleVBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 7.5
mouse_filter = 1

[node name="PanelVbox" type="VBoxContainer" parent="UI/HBoxContainer/MiddleVBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.27
theme_override_constants/separation = 0
script = ExtResource("5_4af0x")
cursor_hover_over_control_resource = ExtResource("6_buayt")

[node name="Space" type="Control" parent="UI/HBoxContainer/MiddleVBox/PanelVbox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
mouse_filter = 1

[node name="MiddlePanel" type="Panel" parent="UI/HBoxContainer/MiddleVBox/PanelVbox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_buayt")

[node name="MarginContainer" type="MarginContainer" parent="UI/HBoxContainer/MiddleVBox/PanelVbox/MiddlePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="HandContainer" type="HBoxContainer" parent="UI/HBoxContainer/MiddleVBox/PanelVbox/MiddlePanel/MarginContainer"]
layout_mode = 2

[node name="CardSlotA" type="Control" parent="UI/HBoxContainer/MiddleVBox/PanelVbox/MiddlePanel/MarginContainer/HandContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 1

[node name="PedastalA" parent="UI/HBoxContainer/MiddleVBox/PanelVbox/MiddlePanel/MarginContainer/HandContainer/CardSlotA" instance=ExtResource("2_4fp31")]
position = Vector2(100, 75)
held_card_attributes = ExtResource("5_d54dk")

[node name="Space" type="Control" parent="UI/HBoxContainer/MiddleVBox/PanelVbox/MiddlePanel/MarginContainer/HandContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
mouse_filter = 1

[node name="CardSlotB" type="Control" parent="UI/HBoxContainer/MiddleVBox/PanelVbox/MiddlePanel/MarginContainer/HandContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 1

[node name="PedastalB" parent="UI/HBoxContainer/MiddleVBox/PanelVbox/MiddlePanel/MarginContainer/HandContainer/CardSlotB" instance=ExtResource("2_4fp31")]
position = Vector2(100, 75)
held_card_attributes = ExtResource("5_d54dk")

[node name="Space2" type="Control" parent="UI/HBoxContainer/MiddleVBox/PanelVbox/MiddlePanel/MarginContainer/HandContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
mouse_filter = 1

[node name="CardSlotC" type="Control" parent="UI/HBoxContainer/MiddleVBox/PanelVbox/MiddlePanel/MarginContainer/HandContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 1

[node name="PedastalC" parent="UI/HBoxContainer/MiddleVBox/PanelVbox/MiddlePanel/MarginContainer/HandContainer/CardSlotC" instance=ExtResource("2_4fp31")]
position = Vector2(100, 75)
held_card_attributes = ExtResource("5_d54dk")

[node name="Space3" type="Control" parent="UI/HBoxContainer/MiddleVBox/PanelVbox/MiddlePanel/MarginContainer/HandContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
mouse_filter = 1

[node name="CardSlotD" type="Control" parent="UI/HBoxContainer/MiddleVBox/PanelVbox/MiddlePanel/MarginContainer/HandContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 1

[node name="PedastalD" parent="UI/HBoxContainer/MiddleVBox/PanelVbox/MiddlePanel/MarginContainer/HandContainer/CardSlotD" instance=ExtResource("2_4fp31")]
position = Vector2(100, 75)
held_card_attributes = ExtResource("5_d54dk")

[node name="RightPanel" type="Panel" parent="UI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ion7m")

[node name="RightVbox" type="VBoxContainer" parent="UI/HBoxContainer/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Space" type="Control" parent="UI/HBoxContainer/RightPanel/RightVbox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="Graveyard" type="Control" parent="UI/HBoxContainer/RightPanel/RightVbox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="UI/HBoxContainer/RightPanel/RightVbox/Graveyard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 200.685
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 100

[node name="GraveyardTexture" type="TextureRect" parent="UI/HBoxContainer/RightPanel/RightVbox/Graveyard/MarginContainer"]
layout_mode = 2
texture = ExtResource("17_00yqp")
expand_mode = 5

[node name="RefillDeckButton" type="Button" parent="UI/HBoxContainer/RightPanel/RightVbox/Graveyard/MarginContainer/GraveyardTexture" node_paths=PackedStringArray("cards_manager")]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("21_3usd0")
deck_resource = ExtResource("11_yswp7")
graveyard_resource = ExtResource("19_mnm7k")
cards_manager = NodePath("../../../../../../../CardsManager")

[connection signal="mouse_entered" from="UI/HBoxContainer/RightPanel/RightVbox/Graveyard/MarginContainer/GraveyardTexture/RefillDeckButton" to="UI/HBoxContainer/RightPanel/RightVbox/Graveyard/MarginContainer/GraveyardTexture/RefillDeckButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="UI/HBoxContainer/RightPanel/RightVbox/Graveyard/MarginContainer/GraveyardTexture/RefillDeckButton" to="UI/HBoxContainer/RightPanel/RightVbox/Graveyard/MarginContainer/GraveyardTexture/RefillDeckButton" method="_on_mouse_exited"]
[connection signal="pressed" from="UI/HBoxContainer/RightPanel/RightVbox/Graveyard/MarginContainer/GraveyardTexture/RefillDeckButton" to="UI/HBoxContainer/RightPanel/RightVbox/Graveyard/MarginContainer/GraveyardTexture/RefillDeckButton" method="_on_pressed"]
